--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
+    "build": "rimraf ./dist && node build/build.js",
     "build:report": "npm_config_report=true npm run build",
     "lint-staged": "lint-staged",
     "lint": "eslint --ext .js,.vue src",
